fix: classe overflow-hidden omite conteúdo apenas nas versões mobile

--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -7,7 +7,9 @@ body {
 }
 
 .overflow-hidden {
-  overflow: hidden;
+  @include breakpoint-down (desktop) {
+    overflow: hidden;
+  }
 }
 
 button,
